--- a/assets/css/page_styles.css
+++ b/assets/css/page_styles.css
@@ -49,6 +49,7 @@ h2 {
     gap: 20px;
     margin: 6rem;
     margin-top: 100px;
+    margin-bottom: 32px;
     padding-top: 48px;
     padding-bottom: 48px;
     border-radius: 13px;
@@ -108,8 +109,7 @@ nav {
     overflow: visible;
 }
 
-nav>div>ul,
-ul {
+nav>div>ul {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -199,6 +199,7 @@ ul {
         margin-left: 16px !important;
         margin-right: 16px !important;
     }
+
 }
 
 #FAQ {
@@ -257,7 +258,7 @@ ul {
 
 .blogThumbnail {
     height: 200px;
-    width: 300px;
+    width: 400px;
     border-radius: 13px;
 }
 
@@ -351,8 +352,8 @@ article {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 13%;
+    margin-right: 13%;
     line-height: 2rem;
     text-wrap: wrap;
     font-size: large;
@@ -369,7 +370,7 @@ article>img {
     margin-bottom: 0.9rem !important;
     margin-top: 0.9rem !important;
     text-align: center;
-    text-wrap: wrap;
+    text-wrap: balance;
     /* hmm normalize.css is pressing my buttons */
 }
 
@@ -396,7 +397,7 @@ article>img {
     justify-content: center;
     align-items: center;
     width: 90%;
-    height: 400px;
+    height: 500px;
     border-radius: 20px;
 }
 
@@ -441,4 +442,11 @@ a {
 hr {
     width: 100%;
     border: 0.5px solid var(--black-line);
+}
+
+blockquote {
+    padding-left: 1em;
+    margin-left: 0.5em;
+    line-height: 1.9em;
+    border-left: 6px solid gray;
 }
